--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Background Video</title>
   <link rel="icon" href="./assets/favicon.ico" />
-  <link rel="stylesheet" href="background-video.css" />
+  <link rel="stylesheet" href="./background-video.css" />
 </head>
 
 <body>
